completed validation part
